# ssg_xplane_plugins

./: CMakeLists.txt  PluginCallBacks.cpp  PluginCallBacks.h  PluginData.cpp  PluginData.h  PluginDataRef.cpp  PluginDataRef.h  PluginEntry.cpp  PluginEntry.h  PluginManagement.cpp  PluginManagement.h  README.md  README.txt  SSGB748.h  SSG_B748.names  build_linux.sh  build_win.bat  config_win.bat  fmc.cpp  fmc.h  utils.cpp  utils.h
SDK/CHeaders/Wrappers/: XPCDisplay.cpp  XPCListener.cpp  XPCProcessing.cpp  XPCWidget.cpp  XPCWidget.h  XPCWidgetAttachments.cpp  a.txt
